Fixed main content spacing

--- a/source/_static/css/style.css
+++ b/source/_static/css/style.css
@@ -3140,7 +3140,7 @@ div.highlight pre {
 			}
 
 			#main-content {
-        width: calc(100% - 350px);
+        width: calc(100% - 360px);
         min-height: 100vh;
         margin-top: 90px;
         margin-left: 360px;
